@@ -1,5 +1,12 @@
 2013-09-11 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c,
+	  src/z80/mappings.i,
+	  src/z80/peep.c:
+	  Stack adjustment code refactoring.
+
+2013-09-11 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCmain.c,
 	  src/port.h,
 	  src/z80/main.c,
